# memsage

./: .gitignore  APPROACH.md  README.md  libtiff-hi-conf.sarif  memsage.toml  pyproject.toml
.github/workflows/: ci.yml
memsage/: __init__.py  cli.py  config.py  exporters.py  llm.py  parser.py  postproc.py  report.py  scan.py  slicer.py  types.py
tests/: test_anthropic_support.py  test_dependencies.py  test_postproc.py  test_sarif_enhancements.py
tests/data/vuln_sample/: buffer_overflow.cpp  complex_scenario.cpp  integer_overflow.cpp  memory_issues.cpp  memory_leak.cpp  race_conditions.cpp  sql_injection.cpp  taint_propagation.cpp
